2005-06-07  Francois Dumont  <dums@stlport...>

	* build/test/unit/Makefile.inc: Fix syntax error at last line.

2005-06-06  Petr Ovtchenkov  <ptr@island...>

	* build/lib/configure: add config options for Metrowerks compiler for
	Novell NetWare platform [references to root of MW headers/libs and to Novell's
	SDK headers/libs].

	* build/Makefiles/gmake/mwccnlm.mak: fixes for Metrowerk/NetWare.

	* build/Makefiles/gmake/app/mwccnlm.mak: idem.

	* build/Makefiles/gmake/netware/extern.mak: idem.

	* build/lib/mwccnlm.mak: idem.

	* build/test/unit/mwccnlm.mak: idem.

2005-06-03  Francois Dumont  <dums@stlport...>

	* test/unit/locale_test.cpp: Remove the very platform dependent LColl
	class that was listing supported locales. STLport already do so and
	report it using a rutime_error exception when not supported. When
	compiler do not support exception only the C locale is checked.

	* build/Makefiles/nmake: Patches from Michael Fink to
	  - check platform before linking to crtrtti.lib
	  - check right configuration when using a nmake-evc?.mak file
	  - update STATUS file.

2005-06-02  Francois Dumont  <dums@stlport...>

	* src/c_locale_win32/c_locale_win32.c: Add workaround for a Windows PSDK bug
	concerning currency international symbol, the seperation character is missing.
	
	* src/locale_impl.h, locale_impl.cpp: Fix implementation to make classic locale
	implementation a normal instance that is released when the counter reach 0, the
	only difference is that no delete is performed on this instance. Idem for classic
	locale implementation facets.

	* stlport/cwctype: And _GLIBCPP_USE_WCHAR_T check when using GLibC as in this
	case wide char functions are not imported in std and must be imported from the
	global namespace.

2005-06-01  Francois Dumont  <dums@stlport...>

	* src/locale_impl.h, locale_impl.cpp: Change classic locale initialization
	implementation for limited compiler like MSVC6.

2005-06-01  Petr Ovtchenkov  <ptr@island...>
