@@ -11,7 +11,6 @@ include ${SRCROOT}/Makefiles/top.mak
 
 
 INCLUDES += -I${STLPORT_INCLUDE_DIR}
-DEFS += -DCPPUNIT_MINI=1
 
 ifdef STLP_BUILD_BOOST_PATH
 INCLUDES += -I${STLP_BUILD_BOOST_PATH}
