@@ -8,7 +8,7 @@ CROSS_COMPILING=1
 !include Makefile.inc
 
 INCLUDES=$(INCLUDES) /I "$(STLPORT_INCLUDE_DIR)" /I "cppunit" /I "$(STLPORT_DIR)/src/" /FI "vc_warning_disable.h"
-DEFS=/D_STLP_NO_CUSTOM_IO /DCPPUNIT_MINI=1
+DEFS=/D_STLP_NO_CUSTOM_IO
 
 DEFS_REL = /D_STLP_USE_DYNAMIC_LIB
 DEFS_DBG = /D_STLP_USE_DYNAMIC_LIB
