@@ -12,7 +12,7 @@ INCLUDES=$(INCLUDES) /I$(STLPORT_INCLUDE_DIR) /I$(STLPORT_DIR)/src /FI vc_warnin
 INCLUDES=$(INCLUDES) /I "$(STLP_BUILD_BOOST_PATH)"
 !endif
 
-DEFS=/D_STLP_NO_CUSTOM_IO /DCPPUNIT_MINI=1
+DEFS=/D_STLP_NO_CUSTOM_IO
 
 DEFS_DBG=/D_STLP_DEBUG_UNINITIALIZED
 DEFS_STLDBG=/D_STLP_DEBUG_UNINITIALIZED
